feat: Update module imports and add date picker feat(ui): Enhance hero section with animated text and media
Updates the module import paths in `index.html` to use `esm.sh` for better version management and browser compatibility. Includes the `react-datepicker` CSS externally.

Refactors the `Home` page by introducing a dynamic hero section with video and image backgrounds, accompanied by an animated text effect for improved visual appeal and engagement. Also, reorganizes import statements for clarity and adds relevant icons.

Removes mock data from `propertyService.ts` and prepares it for actual data fetching.

Adjusts the `Listings` page to dynamically manage search values and selected districts, providing a more interactive filtering experience. It also imports new icons for better UI representation.

The `PropertyDetails` page is updated to include navigation and fetch related properties, enhancing user experience by offering more choices. It also imports new icons to represent various property features and booking options.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Load react-datepicker styles externally for browser compatibility -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/react-datepicker@9.1.0/dist/react-datepicker.css">
     <script>
       tailwind.config = {
         theme: {
@@ -30,7 +32,7 @@
             },
             colors: {
               brand: {
-                red: '#D32F2F', // Based on screenshot
+                red: '#D32F2F', 
                 dark: '#1F2937',
                 light: '#F3F4F6'
               }
@@ -42,14 +44,24 @@
   <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.10.1",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1"
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+    "react-router-dom": "https://esm.sh/react-router-dom@7.1.0?external=react,react-dom",
+    "lucide-react": "https://esm.sh/lucide-react@0.454.0?external=react",
+    "react-datepicker": "https://esm.sh/react-datepicker@9.1.0?external=react,react-dom,date-fns",
+    "date-fns": "https://esm.sh/date-fns@4.1.0",
+    "ical.js": "https://esm.sh/ical.js@2.2.1",
+    "@/": "./",
+    "url": "https://esm.sh/url@0.11.4",
+    "path": "https://esm.sh/path@^0.12.7",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
+
 </head>
   <body>
     <div id="root"></div>
